# php-memcached22

./: CMakeLists.txt
